--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -2148,6 +2148,7 @@ comments</property>
 	  <child>
 	    <widget class="GtkButton" id="button_help">
 	      <property name="visible">True</property>
+	      <property name="tooltip" translatable="yes">Help with Chronopic port</property>
 	      <property name="can_focus">True</property>
 	      <property name="relief">GTK_RELIEF_NORMAL</property>
 	      <property name="focus_on_click">True</property>
@@ -3091,7 +3092,7 @@ weight</property>
 <widget class="GtkWindow" id="error_window">
   <property name="border_width">10</property>
   <property name="visible">True</property>
-  <property name="title" translatable="yes">ChronoJump - Error</property>
+  <property name="title" translatable="yes">ChronoJump</property>
   <property name="type">GTK_WINDOW_TOPLEVEL</property>
   <property name="window_position">GTK_WIN_POS_CENTER_ALWAYS</property>
   <property name="modal">True</property>
@@ -22315,8 +22316,6 @@ comments</property>
 </widget>
 
 <widget class="GtkWindow" id="splash_window">
-  <property name="width_request">320</property>
-  <property name="height_request">240</property>
   <property name="visible">True</property>
   <property name="title" translatable="yes">Chonojump</property>
   <property name="type">GTK_WINDOW_TOPLEVEL</property>
@@ -22333,23 +22332,66 @@ comments</property>
   <property name="urgency_hint">False</property>
 
   <child>
-    <widget class="GtkLabel" id="label506">
+    <widget class="GtkVBox" id="vbox120">
       <property name="visible">True</property>
-      <property name="sensitive">False</property>
-      <property name="label" translatable="yes">Loading Chronojump...</property>
-      <property name="use_underline">False</property>
-      <property name="use_markup">False</property>
-      <property name="justify">GTK_JUSTIFY_LEFT</property>
-      <property name="wrap">False</property>
-      <property name="selectable">False</property>
-      <property name="xalign">0.5</property>
-      <property name="yalign">0.5</property>
-      <property name="xpad">0</property>
-      <property name="ypad">0</property>
-      <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
-      <property name="width_chars">-1</property>
-      <property name="single_line_mode">False</property>
-      <property name="angle">0</property>
+      <property name="homogeneous">False</property>
+      <property name="spacing">0</property>
+
+      <child>
+	<widget class="GtkImage" id="image_logo">
+	  <property name="visible">True</property>
+	  <property name="xalign">0.5</property>
+	  <property name="yalign">0.5</property>
+	  <property name="xpad">0</property>
+	  <property name="ypad">0</property>
+	</widget>
+	<packing>
+	  <property name="padding">0</property>
+	  <property name="expand">True</property>
+	  <property name="fill">True</property>
+	</packing>
+      </child>
+
+      <child>
+	<widget class="GtkLabel" id="myLabel">
+	  <property name="visible">True</property>
+	  <property name="sensitive">False</property>
+	  <property name="label" translatable="yes">Loading Chronojump...</property>
+	  <property name="use_underline">False</property>
+	  <property name="use_markup">False</property>
+	  <property name="justify">GTK_JUSTIFY_LEFT</property>
+	  <property name="wrap">False</property>
+	  <property name="selectable">False</property>
+	  <property name="xalign">0.5</property>
+	  <property name="yalign">0.5</property>
+	  <property name="xpad">0</property>
+	  <property name="ypad">0</property>
+	  <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
+	  <property name="width_chars">-1</property>
+	  <property name="single_line_mode">False</property>
+	  <property name="angle">0</property>
+	</widget>
+	<packing>
+	  <property name="padding">0</property>
+	  <property name="expand">False</property>
+	  <property name="fill">False</property>
+	</packing>
+      </child>
+
+      <child>
+	<widget class="GtkProgressBar" id="progressbar1">
+	  <property name="visible">True</property>
+	  <property name="orientation">GTK_PROGRESS_LEFT_TO_RIGHT</property>
+	  <property name="fraction">0</property>
+	  <property name="pulse_step">0.10000000149</property>
+	  <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
+	</widget>
+	<packing>
+	  <property name="padding">0</property>
+	  <property name="expand">False</property>
+	  <property name="fill">False</property>
+	</packing>
+      </child>
     </widget>
   </child>
 </widget>
